调整请求参数

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>guava</artifactId>
             <version>31.0.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-spring-boot-starter</artifactId>
+            <version>6.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
