--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ server:
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://123.56.161.89:3306/myservice?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://127.0.0.1:3306/myservice?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
+#        url: jdbc:mysql://123.56.161.89:3306/myservice?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
         username: ruanhua
         password: ruanhua2008
         hikari:
@@ -29,6 +30,7 @@ spring:
                 max-idle: 8
 
 mybatis-plus:
+    type-aliases-package: org.snaker.engine.entity
     configuration:
         log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
         # 该配置就是将带有下划线的表字段映射为驼峰格式的实体类属性
